[package]
authors    =["Pluto Authors"]
description="""ronkathon"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="ronkathon"
repository ="https://github.com/thor314/ronkathon"
version    = "0.1.0"

[dependencies]
rand     ="0.8.5"
itertools="0.13.0"
hex      ="0.4.3"

[dev-dependencies]
rstest               ="0.21.0"
pretty_assertions    ="1.4.0"
sha2                 ="0.10.8"
ark-ff               ={ version="^0.4.0", features=["std"] }
ark-crypto-primitives={ version="0.4.0", features=["sponge"] }
des                  ="0.8.1"
chacha20             ="0.9.1"

[patch.crates-io]
ark-ff       ={ git="https://github.com/arkworks-rs/algebra/" }
ark-ec       ={ git="https://github.com/arkworks-rs/algebra/" }
ark-poly     ={ git="https://github.com/arkworks-rs/algebra/" }
ark-serialize={ git="https://github.com/arkworks-rs/algebra/" }
ark-std      ={ git="https://github.com/arkworks-rs/std/" }

[[example]]
name="aes_chained_cbc"

[[example]]
name="symmetric_group"
