[package]
authors    =["Pluto Community"]
description="Cryptography Educational Foundations"
edition    ="2021"
license    ="MIT OR Apache-2.0"
name       ="ronkathon"
repository ="https://github.com/pluto/ronkathon"
version    ="0.1.1"
exclude    =["CHANGELOG.md", "assets/"]

[dependencies]
rand          ="0.8"
itertools     ="0.14"
hex           ="0.4"
crypto-bigint ="0.6.0-rc.6"
regex         ="1.11.1"
num-traits    ="0.2.19"

[dev-dependencies]
rstest               ="0.24"
pretty_assertions    ="1.4"
sha2                 ="0.10"
ark-ff               ={ version="0.5", features=["std"] }
ark-crypto-primitives={ version="0.5", features=["sponge"] }
des                  ="0.8"
chacha20             ="0.9"
hex-literal          ="0.4"

[[bin]]
name="hmac_sha256_bin"
path="src/hmac/bin/hmac_sha256_bin.rs"

[[example]]
name="aes_chained_cbc"

[[example]]
name="symmetric_group"

[[example]]
name="merkle_tree"
